--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
     "@visx/group": "^3.12.0",
     "@visx/scale": "^3.12.0",
@@ -19,9 +20,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-spring": "^10.0.1",
     "recharts": "^2.15.3",
+    "redux": "^5.0.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
