--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "sass-embedded": "^1.89.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
 }
